Nuevo color de fondo de mi proyecto

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 /* Estilos generales del proyecto */
 
 body{
-    background-color: #eceef3; /* color en código hexagecimal de 6 digitos */
+    background-color: #13275c; /* color en código hexagecimal de 6 digitos */
     font-family: 'Roboto', sans-serif;
 }
 
